# Nature_Scene_CGPra2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
assets/forrest/: Artists_Conk_Basic.glb  Artists_Conk_Big.glb  Artists_Conk_Group_1.glb  Artists_Conk_Group_2.glb  Artists_Conk_Small.glb  Asarabacca_1.glb  Asarabacca_2.glb  Asarabacca_3.glb  Bay_Bolete_Basic.glb  Bay_Bolete_Big.glb  Bay_Bolete_Group_1.glb  Bay_Bolete_Group_2.glb  Bay_Bolete_Small.glb  Birch_Tree_1.glb  Birch_Tree_2.glb  Birch_Tree_3.glb  Blackberry.glb  Blackberry_Bush_1a.glb  Blackberry_Bush_1b.glb  Blackberry_Bush_2a.glb  Blackberry_Bush_2b.glb  Blackberry_Bush_3a.glb  Blackberry_Bush_3b.glb  Blackbird_f.glb  Blackbird_m.glb  Blue_Tit.glb  Branch_1.glb  Branch_2.glb  Branch_3.glb  Brown_Mushrooms_Cluster_1.glb  Brown_Mushrooms_Cluster_2.glb  Brown_Mushrooms_Cluster_3.glb  Clover_1.glb  Clover_2.glb  Clover_3.glb  Crested_Tit.glb  Fern_1a.glb  Fern_1b.glb  Fern_1c.glb  Fir_Tree_1.glb  (+78 more)
assets/objects/: landscape.fbx  rock_moss_01_2k.glb  rock_moss_02_2k.glb  rock_moss_03_2k.glb  rock_moss_04_2k.glb  rock_moss_05_2k.glb  walkman_2k.glb
assets/terrain/ganges_river_pebbles_2k.gltf/: ganges_river_pebbles_2k.gltf
assets/terrain/rocky_terrain_2k.gltf/: rocky_terrain_2k.gltf
assets/textures/gravel_ground_01_2k.gltf/: gravel_ground_01_2k.gltf
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: grass.fs.glsl  grass.vs.glsl  object.fs.glsl  object.vs.glsl  phong.fs.glsl  phong.vs.glsl  post_fog.fs.glsl  post_fog.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  terrain.fs.glsl  terrain.vs.glsl  water.fs.glsl  water.vs.glsl
src/: Camera.cpp  Camera.h  ForestSystem.cpp  ForestSystem.h  GrassRenderer.cpp  GrassRenderer.h  GrassSystem.cpp  GrassSystem.h  InputManager.cpp  InputManager.h  Model.cpp  Model.h  PostProcessor.h  SceneManager.cpp  SceneManager.h  Shader.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  TreeGenerator.cpp  TreeGenerator.h  UIManager.cpp  UIManager.h  WaterPlane.h  main.cpp
